--- a/src/main/resources/swagger-ui/index.html
+++ b/src/main/resources/swagger-ui/index.html
@@ -19,6 +19,7 @@
   <script src='swagger-ui.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script src='lib/marked.js' type='text/javascript'></script>
+  <script src='lib/swagger-oauth.js' type='text/javascript'></script>
 
   <script type="text/javascript">
     $(function () {
@@ -47,7 +48,8 @@
           log("Unable to Load SwaggerUI");
         },
         docExpansion: "none",
-        sorter : "alpha"
+        apisSorter: "alpha",
+        showRequestHeaders: false
       });
 
       function addApiKeyAuthorization(){
@@ -65,7 +67,6 @@
       /*
         var apiKey = "myApiKeyXXXX123456789";
         $('#input_apiKey').val(apiKey);
-        addApiKeyAuthorization();
       */
 
       window.swaggerUi.load();
