--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -105,7 +105,7 @@
                 <a href="<%= changelog %>"> <span class="glyphicon glyphicon-file" aria-hidden="true"></span> Changelog</a>
              </span>
              <span class="col-md-4">
-              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Cliente: <%= client %>
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Client: <%= client %>
              </span>
         </h6>
       </div>
