minor fixes and add jquery-dateForamt

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -39,6 +39,7 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/underscore.js"></script>
 <script src="js/backbone.js"></script>
+<script src="js/jquery-dateFormat.js"></script>
 
 <script id="projectListTpl" type="text/template">
   <div class="col-md-4">
@@ -160,7 +161,6 @@
     </ul>
   </div>
 </script>
-<script src="js/utils.js"></script>
 <script src="js/application.js"></script>
 </body>
 </html>
