--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -89,7 +89,6 @@
       </div>
       <% } %>
       <div class="panel-body">
-       
         <h6 class="col-md-12"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Description: <%= description %></h6>
         </br>
         <h6>
@@ -109,11 +108,23 @@
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Client: <%= client %>
              </span>
              <span class="col-md-4">
-                  <button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#eventModal">
+                  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#eventModal">
                     Add Event
                 </button>
              </span>
         </h6>
+          <div class="col-md-12">
+              <h5>Modules</h5>
+              <% _.each(modules, function(m){ %>
+              <div class="col-lg-3">
+                  <div class="list-group-item" style="padding: 7px;">
+                      <span style="float:right" class="badge"><%= m.version %></span>
+                      <span style="float:right" class="badge"><span class="glyphicon glyphicon-<%= m.icon %>-circle" aria-hidden="true"></span></span>
+                      <b><%= m.name %></b>
+                  </div>
+              </div>
+              <% }); %>
+          </div>
         <div class="modal fade" id="eventModal" tabindex="-1" role="dialog" aria-labelledby="eventModal">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -146,19 +157,22 @@
         </div>
       </div>
     </div>
+
     <h4>Events</h4>
-    <ul class="list-group">
-      <% _.each(events, function(ev){ %>
-      <li class="list-group-item">
-        <span style="float:right" class="label label-<%= ev.color %>"><%= _.escape(ev.status) %></span>
-        <% if (ev.description !== "") { %>
-        <p><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Description: <%= _.escape(ev.description) %></p>
-        <% } %>
-        <p><span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-          DateTime: <%= _.escape(ev.timestamp) %></p>
-      </li>
-      <% }); %>
-    </ul>
+      <div class="row">
+        <ul class="list-group">
+          <% _.each(events, function(ev){ %>
+          <li class="list-group-item">
+            <span style="float:right" class="label label-<%= ev.color %>"><%= _.escape(ev.status) %></span>
+            <% if (ev.description !== "") { %>
+            <p><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Description: <%= _.escape(ev.description) %></p>
+            <% } %>
+            <p><span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+              DateTime: <%= _.escape(ev.timestamp) %></p>
+          </li>
+          <% }); %>
+        </ul>
+      </div>
   </div>
 </script>
 <script src="js/application.js"></script>
