--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -116,11 +116,11 @@
           <div class="col-md-12">
               <h5>Modules</h5>
               <% _.each(modules, function(m){ %>
-              <div class="col-lg-3">
+              <div class="col-md-4">
                   <div class="list-group-item" style="padding: 7px;">
-                      <span style="float:right" class="badge"><%= m.version %></span>
-                      <span style="float:right" class="badge"><span class="glyphicon glyphicon-<%= m.icon %>-circle" aria-hidden="true"></span></span>
-                      <b><%= m.name %></b>
+                      <h6><span style="float:right; margin-left: 2px" class="label label-primary"><%= m.version %></span></h6>
+                      <h6><span style="float:right" class="label label-<%= m.color %>"><span class="glyphicon glyphicon-<%= m.icon %>-circle" aria-hidden="true"></span></span></h6>
+                      <h6><%= m.name %></h6>
                   </div>
               </div>
               <% }); %>
