add to gui config

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -111,6 +111,9 @@
              <span class="col-md-4">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Client: <%= client %>
              </span>
+                    <span class="col-md-4">
+                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Configuration: <%= configuration %>
+             </span>
                 </h6>
 
                 <div class="col-md-12">
