minor fixes and add primary key

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -13,7 +13,8 @@
         <div class="navbar-header">
             <a href="/" class="navbar-brand">
                 <span class="glyphicon glyphicon-send" aria-hidden="true"></span>
-                Deploy Logger Service</a>
+                Deploy Logger Service
+            </a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-right">
