--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Deploy Details -->
-    <div class="content-section col-md-12">
+    <div class="content-section tab-content">
     </div>
 
 </div>
