added update version check

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Deploy Details -->
-    <div class="content-section tab-content">
+    <div class="content-section tab-content col-md-12">
     </div>
 
 </div>
@@ -60,7 +60,7 @@
 <script id="projectTpl" type="text/template">
     <div class="panel panel-primary">
         <div class="panel-heading">
-           <h2 class="panel-title">Project: <%= name %></h2></a>
+            <a href="#<%= name %>" style="color:white"><h2 class="panel-title">Project: <%= name %></h2></a>
         </div>
         <div class="panel-body">
             <p>Description: <%= description %></p>
