changed started glyphicon

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -101,7 +101,7 @@
 </script>
 
 <script id="deployTpl" type="text/template">
-    <th><span class='glyphicon glyphicon-<%= status %>-sign' aria-hidden="true"></span></th>
+    <th><span class='glyphicon glyphicon-<%= status %>' aria-hidden="true"></span></th>
     <th><%= timestamp %></th>
     <th><%= description %></th>
     <th><%= version %></th>
