--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -239,6 +239,7 @@
         </div>
     </div>
 </script>
+<script src="js/util.js"></script>
 <script src="js/application.js"></script>
 </body>
 </html>
