--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -51,7 +51,7 @@
             <div class="panel-body">
                 <p>Description: <%= description %></p>
 
-                <p><a href="<%= git %>"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> <%= git %></a>
+                <p><a target="_blank" href="<%= git %>"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> <%= git %></a>
                 </p>
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="panel-body">
             <p>Description: <%= description %></p>
 
-            <p><a href="<%= git %>"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> <%= git %></a></p>
+            <p><a target="_blank" href="<%= git %>"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> <%= git %></a></p>
         </div>
     </div>
 </script>
@@ -143,14 +143,14 @@
                     <span class="col-md-4"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Version: <%= version %></span>
                     <span class="col-md-4"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User: <%= user %></span>
               <span class="col-md-4">
-                 <a href="https://bitbucket.org/shiftforward/<%= projname %>/commits/<%=commitHash%>">
+                 <a target="_blank" href="https://bitbucket.org/shiftforward/<%= projname %>/commits/<%=commitHash%>">
                      <span class="glyphicon glyphicon-random" aria-hidden="true"></span> <%= commitBranch %></a>
               </span>
                 </h6>
                 </br>
                 <h6>
              <span class="col-md-4">
-                <a href="<%= changelog %>"> <span class="glyphicon glyphicon-file" aria-hidden="true"></span> Changelog</a>
+                <a target="_blank" href="<%= changelog %>"> <span class="glyphicon glyphicon-file" aria-hidden="true"></span> Changelog</a>
              </span>
              <span class="col-md-4">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Client: <%= client %>
