--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -131,8 +131,8 @@
                 <h3 class="panel-title">Deploy at <%= timestamp %></h3>
             </div>
             <% if (deploy.running) { %>
-            <div class="progress progress-striped active" style="margin-bottom:0px; animation-direction: reverse">
-                <div class="progress-bar" style="width: 100%"></div>
+            <div class="progress progress-striped active" style="margin-bottom:0px">
+                <div class="progress-bar" style="width: 100%; animation-direction: reverse"></div>
             </div>
             <% } %>
             <div class="panel-body">
