--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -51,9 +51,11 @@
             </div>
             <div class="panel-body">
                 <p>Description: <%= description %></p>
-
-                <p><a target="_blank" href="<%= git %>"><span class="glyphicon glyphicon-link"
-                                                              aria-hidden="true"></span> <%= git %></a>
+                <p>
+                    <a target="_blank" href="<%= git %>">
+                        <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+                        <%= git %>
+                    </a>
                 </p>
             </div>
         </div>
@@ -69,7 +71,7 @@
             <div class="panel-body">
                 <% _.each(modules, function(m){ %>
                 <div class="col-md-4">
-                    <div class="list-group-item" style="padding: 7px;margin-bottom:5px">
+                    <div class="list-group-item unique">
                         <h6>
                             <span class="label shift-version label-primary">
                                 <%= m.version %>
@@ -192,7 +194,7 @@
                     <h5>Modules</h5>
                     <% _.each(modules, function(m){ %>
                     <div class="col-md-4">
-                        <div class="list-group-item" style="padding: 7px;margin-bottom:5px">
+                        <div class="list-group-item unique" >
                             <h6>
                                 <span class="label shift-version label-primary">
                                     <%= m.version %>
