added download button on config file

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -181,10 +181,11 @@
                                         aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">Configuration</h4>
                             </div>
-                            <div class="modal-body" style="max-height: 300px;overflow-y: scroll;">
+                            <div class="modal-body" id="configText" style="max-height: 300px;overflow-y: scroll;">
                                 <%= configuration %>
                             </div>
                             <div class="modal-footer">
+                                <button id="downloadButton" type="button" class="btn btn-primary">Download</button>
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             </div>
                         </div>
