added favicon dependencies

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -7,6 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="stylesheet" href="css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="css/stylus.css">
+    <link rel="icon" type="image/png" href="resources/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="resources/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="resources/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="resources/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="resources/manifest.json">
+    <link rel="shortcut icon" href="resources/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/resources/mstile-144x144.png">
+    <meta name="msapplication-config" content="/resources/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
