--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="navbar-header">
             <a href="/" class="navbar-brand">
-                <span class="glyphicon top-icon" aria-hidden="true"><img style="height: 100%; padding-right: 0px;" src="resources/android-chrome-192x192.png"></span>
+                <span class="top-icon" aria-hidden="true"><img style="height: 100%;" src="resources/android-chrome-192x192.png"></span>
                 Deploy Logger Service
             </a>
         </div>
