Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ An example of using is available at <code>/DeployScript/sample.rb</code></p>
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h2>
 
-<p><em>Malamute</em> was created by João Pedro Dias and supported by Bruno Maia and Luís Fonseca at <a href="http://www.shiftforward.eu/">ShiftForward</a>.</p>
+<p><em>Malamute</em> was created by <a href="http://jpdias.github.io">João Pedro Dias</a> and supported by <a href="https://brunomaia.eu/">Bruno Maia</a> and <a href="http://www.pimentelfonseca.pt/">Luís Fonseca</a> at <a href="http://www.shiftforward.eu/">ShiftForward</a>.</p>
 
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
