changes to readme and fixed bug on UI

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -248,7 +248,7 @@
                                     </div>
                                     <button class="btn btn-primary"
                                             data-url="/api/project/<%= projname %>/deploy/<%= id %>/event"
-                                            id="addEvent">
+                                            id="addEvent" data-dismiss="modal">
                                         Add Event
                                     </button>
                                 </form>
